初始化项目版本

--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,15 @@
     },
     "config": {
         "preferred-install": "dist"
-    }
+    },
+     "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://packagist.phpcomposer.com"
+        }
+    },"autoload": {
+        "psr-4": {
+            "rap\\": ""
+        }
+    }   
 }
