--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "duohuo/rap",
+    "name": "duohuo/rapphp",
     "description": "php IOC&AOP framework",
     "type": "project",
     "keywords": [
