--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "smarty/smarty": "3.1.19"
     },
     "config": {
         "preferred-install": "dist"
