--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "smarty/smarty": "3.1.19"
+        "php": ">=5.3.0"
     },
     "config": {
         "preferred-install": "dist"
