--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
             "rap\\": ""
         },
         "files": [
-            "src/helper.php"
+            "common.php"
         ]
     }   
 }
