--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "rmccue/requests": ">=1.0"
     },
     "config": {
         "preferred-install": "dist"
