--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "rmccue/requests": ">=1.0"
+        "rmccue/requests": ">=1.0",
+        "twig/twig": "~1.0"
     },
     "config": {
         "preferred-install": "dist"
