--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "require": {
         "php": ">=5.3.0",
         "rmccue/requests": ">=1.0",
-        "twig/twig": "~1.0"
+        "twig/twig": "~1.0",
+        "endroid/qrcode": "^1.9"
     },
     "config": {
         "preferred-install": "dist"
